hphp/hack/test/typecheck/variablevariable.php.exp
File "variablevariable.php", line 7, characters 10-10:
A valid variable name starts with a letter or underscore, followed by any number of letters, numbers, or underscores (Parsing[1002])
